--- a/HTML.html
+++ b/HTML.html
@@ -27,36 +27,46 @@
     <header>
       <!--------NAvigation bar------->
 
-      <nav class="sidebar">
-        <div class="text">Tribute To Doctors</div>
-        <ul>
+     
+  <nav class="navbar navbar-dark">
+    <h3 class="navbar-brand ml-5">TRIBUTE TO DOCTORS</h3>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+       
+    <div class=" p-4 navbar-nav me-auto mb-2 mb-lg-0">
+      <ul>
           <li class="active"><a href="#carouselExampleCaptions">Home</a></li>
-          <li>
-            <a href="#aboutCovid19" class="feat-btn"
+          <li class="nav-item">
+            <a href="#aboutCovid19" class="feat-btn nav-link"
               >About Covid
               <span class="fas fa-caret-down first"></span>
             </a>
-            <ul>
-              <li><a href="#testing">Testing</a></li>
-              <li><a href="#symptoms">Symptoms</a></li>
-              <li><a href="#measures">Measures</a></li>
+            <ul class="nav-item">
+              <li class="nav-item pl-5"><a class="nav-link" href="#testing">Testing</a></li>
+              <li class="nav-item pl-5"><a class="nav-link" href="#symptoms">Symptoms</a></li>
+              <li class="nav-item pl-5"><a class="nav-link" href="#measures">Measures</a></li>
             </ul>
           </li>
-          <li>
-            <a href="#aboutSecWave" class="serv-btn"
+          <li class="nav-item">
+            <a href="#aboutSecWave" class="serv-btn nav-link"
               >About Second wave
               <span class="fas fa-caret-down second"></span>
             </a>
             <ul class="serv-show">
-              <li><a href="#reason">Reasons</a></li>
-              <li><a href="#consern">Consern</a></li>
-              <li><a href="#symp">Symptoms</a></li>
-              <li><a href="#measures2">Measures</a></li>
+              <li class="nav-item pl-5"><a class="nav-link" href="#reason">Reasons</a></li>
+              <li class="nav-item pl-5"><a class="nav-link" href="#consern">Consern</a></li>
+              <li class="nav-item pl-5"><a class="nav-link" href="#symp">Symptoms</a></li>
+              <li class="nav-item pl-5"><a class="nav-link" href="#measures2">Measures</a></li>
             </ul>
           </li>
-          <li><a href="#">Tribute to Doctors</a></li>
+          <li class="nav-item"><a class="nav-link" href="tribute.html" target="_blank">Tribute to Doctors</a></li>
         </ul>
-      </nav>
+    </div>
+  </div>
+  </nav>
+
       <!--------End NAvigation bar------->
     </header>
 
@@ -111,7 +121,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/covid.jpg"
+              src="https://images.ctfassets.net/pjshm78m9jt4/403751_0/d9ddb1eae18b91f5b9c1bdd3cda5e601/importedImage403751_0"
               class="d-block w-100"
               alt="..."
             />
@@ -145,7 +155,7 @@
 
       <!---------Store----------->
 
-      <div class="container-fluid infos d-flex justify-content-around my-5">
+      <div class="container infos d-flex justify-content-around my-5">
         <div style="background-color: #ffc1e3" class="info">
           <h4>Total Vaccination Dose Status</h4>
           <p>4,619,976,274</p>
@@ -164,7 +174,7 @@
 
       <!-----------About covid-19-------------->
 
-      <article class="container p-2 m-5" id="aboutCovid19">
+      <article class="p-2 container" id="aboutCovid19">
         <h3 class="text-center mb-5">About Covid-19</h3>
 
         <p>
@@ -212,7 +222,7 @@ Other coronaviruses have been discovered from pigs, dogs, cats, rodents, cows, h
 
       <!----------------About 2nd wave-------------->
 
-      <article class="container p-2 m-5" id="aboutSecWave">
+      <article class="p-2 container mt-5" id="aboutSecWave">
           <h3 class="text-center mb-5">About Second Wave</h3>
           <p>&emsp;&ensp;&emsp;&ensp;India recorded the first few cases of COVID-19 in March 2020 and then on until September of 2020, COVID cases continued increasing. After September, fewer cases began to be reported and the first wave of COVID officially began to decline. By the beginning of 2021, only a handful of cases were reported in PAN India and normalcy was almost restored. 
 
@@ -263,7 +273,7 @@ However, from February onwards the cases began to rise exponentially and in 1 mo
         </p>
       </article>
 
-      <article class="container p-2 m-5" >
+      <article class="container p-2" >
         <h3 class="text-center mb-5">Gallery</h3>
         <div id="grid">
           <img src="https://tse4.mm.bing.net/th?id=OIP.OmfEs5_hstuOIob001oOQQHaFj&pid=Api&P=0&w=232&h=175" alt="">
